# r2e

./: .gitignore  LICENSE  README.md  pyproject.toml  unittest.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: conventional_commits.yml  pyright.yml
demos/: README.md  setup.sh
demos/refactor/: refactor.py  soln.txt  utils.py
docs/: CLI.md  fullguide.md  gendocs.py  helpers.py  quickstart.ipynb  quickstart.md  usage.ipynb
r2e/: config.yml  installer.py  logger.py  paths.py
r2e/evaluators/: testgen.py
r2e/execution/: execute.py  execute_futs.py  execution_args.py  r2e_simulator.py  run_self_equiv.py  service.py  utils.py
r2e/generators/context/: base.py  full.py  sliced.py  utils.py
r2e/generators/specgen/: generate.py  prompt.py  utils.py
r2e/generators/testgen/: __init__.py  args.py  generate.py  prompt.py  repair.py  task.py  utils.py
r2e/llms/: base_runner.py  language_model.py  openai_runner.py  vllm_runner.py
r2e/models/: callgraph.py  classes.py  codegen_problem.py  context.py  file.py  fut.py  module.py  repo.py  tests.py
r2e/pat/ast/: augmenter.py  explorer.py  transformer.py
r2e/pat/callgraph/: __init__.py  explorer.py  generator.py
r2e/pat/dependency_slicer/: ast_statements.py  slicer_main.py
r2e/pat/imports/: __init__.py
r2e/pat/instrument/: arguments.py
r2e/repo_builder/: __init__.py  extract_func_methods.py  repo_args.py  run_pycg.py  setup_repos.py
r2e/repo_builder/docker_builder/: r2e_dockerfile_builder.py  r2e_final_dockerfile.dockerfile
r2e/repo_builder/fut_extractor/: extract_base.py  extract_functions.py  extract_methods.py  extract_repo_data.py
r2e/utils/: data.py  models.py
src/r2e/: cli.py  logger.py  multiprocess.py  paths.py
src/r2e/evaluators/: testgen.py
src/r2e/execution/: args.py  execute.py  helpers.py  r2e_simulator.py  run_self_equiv.py
src/r2e/llms/: __init__.py  base_runner.py  cache_object.py  completions.py  language_model.py  llm_args.py  openai_runner.py  vllm_runner.py
src/r2e/models/: __init__.py  classes.py  function.py  fut.py  identifier.py  method.py  repo.py  tests.py
src/r2e/pat/: README.md
src/r2e/repo_builder/: README.md  (+4 more)
tests/: test_logger.py
tests/models/: test_models.py
tests/repo_builder/: test_extract_repo_data.py
(+62 files in other folders)
